deployment/base/outline/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: outline
  namespace: outline
spec:
  replicas: 1
  selector:
    matchLabels:
      app: outline
  template:
    metadata:
      labels:
        app: outline
    spec:
      containers:
        - name: outline
          image: outlinewiki/outline:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
          volumeMounts:
            - name: outline-data
              mountPath: /var/lib/outline/data
      volumes:
        - name: outline-data
          persistentVolumeClaim:
            claimName: outline-data
