deployment/base/outline/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: outline-postgres
  namespace: outline
spec:
  replicas: 1
  selector:
    matchLabels:
      app: outline-postgres
  template:
    metadata:
      labels:
        app: outline-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - name: postgres
              containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
              subPath: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: outline-postgres-data
---
apiVersion: v1
kind: Service
metadata:
  name: outline-postgres
  namespace: outline
spec:
  type: ClusterIP
  selector:
    app: outline-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
