deployment/base/outline/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: outline-redis
  namespace: outline
spec:
  replicas: 1
  selector:
    matchLabels:
      app: outline-redis
  template:
    metadata:
      labels:
        app: outline-redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - name: redis
              containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: outline-redis
  namespace: outline
spec:
  type: ClusterIP
  selector:
    app: outline-redis
  ports:
    - name: redis
      port: 6379
      targetPort: redis
