deployment/base/outline/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: outline
  namespace: outline
spec:
  type: ClusterIP
  selector:
    app: outline
  ports:
    - name: http
      port: 3000
      targetPort: http
