deployment/base/outline/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: outline
  namespace: outline
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`wiki.hauptspeicher.com`)
      kind: Rule
      services:
        - name: outline
          port: 3000
  tls:
    certResolver: myresolver
